--- a/src/content/studio/api-keys.mdx
+++ b/src/content/studio/api-keys.mdx
@@ -1,17 +1,18 @@
 ---
 title: API keys
+description: In GraphOS
 ---
 
 import ObtainGraphApiKey from '../shared/obtain-graph-api-key.mdx';
 import ObtainPersonalApiKey from '../shared/obtain-personal-api-key.mdx';
 
-Every application that sends data to Apollo must use an **API key** to do so. Apollo Studio enables you to create and manage two types of API keys: **graph API keys** and **personal API keys**. Every system that _isn't_ running as part of your local development setup should always use a graph API key.
+Every application that sends data to Apollo GraphOS must use an **API key** to do so. Apollo Studio enables you to create and manage two types of API keys: **graph API keys** and **personal API keys**. Every system that _isn't_ running as part of your local development setup should always use a graph API key.
 
 ## Graph API keys
 
-A graph API key provides access to a **single graph** in Apollo Studio. A GraphQL server (such as Apollo Server) can use a graph API key to register its schema and push metrics to Studio.
+A graph API key provides access to interacting with a **single graph** in GraphOS.
 
-Create a unique graph API key for each non-development system that communicates with Studio. Doing so enables you to revoke access to a single system without affecting others.
+Create a unique graph API key for each non-development system that communicates with GraphOS. Doing so enables you to revoke access to a single system without affecting others.
 
 <ObtainGraphApiKey />
 
@@ -25,8 +26,8 @@ You can't change a graph API key's role after it's created. Instead, create a ne
 
 ## Personal API keys
 
-A personal API key provides partial access to **every graph in every organization you belong to**. A personal API key has the same permissions that your user account has in each of your organizations.
+A personal API key provides partial access to **every graph in every organization you belong to**. Specifically, it has the same permissions that your user account has in each of those organizations.
 
-Personal API keys are useful for local development tools (like the Apollo [CLI](/devtools/cli/) and [VS Code extension](/devtools/editor-plugins/)) to load schemas and other data from Studio.
+Personal API keys are useful for local development tools (like the [Rover CLI](/rover/) and the Apollo [VS Code extension](/devtools/editor-plugins/)) to load schemas and other data from Studio.
 
 <ObtainPersonalApiKey />
