--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -24,7 +24,7 @@ Apollo is a platform for building a [**supergraph**](./intro/platform/), a unifi
 <DocsetGrid>
   <Docset
     icon={DOCSET_ICONS.studio}
-    title="Studio"
+    title="GraphOS"
     description="Build your supergraph with your team, evolve it safely, and keep it running smoothly."
     path="/studio"
     cta={CTA_LEARN}
@@ -56,7 +56,7 @@ Apollo is a platform for building a [**supergraph**](./intro/platform/), a unifi
   <Docset
     icon={DOCSET_ICONS.rover}
     title="Rover CLI"
-    description="Manage your Studio graphs and schemas from the command line."
+    description="Manage your graphs and schemas from the command line."
     path="/rover"
   />
 </DocsetGrid>
