--- a/src/content/studio/contracts.mdx
+++ b/src/content/studio/contracts.mdx
@@ -77,7 +77,7 @@ Contract routers can safely connect to the same subgraph instances as any other 
 
 #### Contract documentation
 
-In Studio, each contract variant has its own README, schema reference, and Explorer. If you [make a contract variant public](./org/graphs/#public-variants), you can provide these resources to external client developers to help them interact with a specific portion of your graph (while omitting irrelevant types and fields).
+In Studio, each contract variant has its own README, schema reference, and Explorer. If you [make a contract variant public](./graph-access-permissions/#public-variants), you can provide these resources to external client developers to help them interact with a specific portion of your graph (while omitting irrelevant types and fields).
 
 ## Setup
 
