--- a/src/content/studio/graph-access-permissions.mdx
+++ b/src/content/studio/graph-access-permissions.mdx
@@ -11,7 +11,7 @@ You can enable public access for individual variants of your graph. If you do, *
   - This shows the variant's README.
 - Schema
 - Explorer
-  - You can also [embed the Explorer](../explorer/embed-explorer/) on your own webpage.
+  - You can also [embed the Explorer](./explorer/embed-explorer/) on your own webpage.
 
 This enables consumers of your graph to learn about your graph's schema and any special usage information (such as authentication details) that you've documented in [the public variant's README](#the-readme-page). They can also run properly authenticated operations against your graph with the Explorer.
 
