--- a/src/content/technotes/TN0008-production-readiness-checklist.mdx
+++ b/src/content/technotes/TN0008-production-readiness-checklist.mdx
@@ -8,8 +8,8 @@ We recommend that you complete this checklist before your supergraph begins hand
 
 ## In Apollo Studio
 
-- Ensure that you've created multiple [variants](/studio/org/graphs#managing-variants) to represent the different environments where your supergraph runs (production, staging, and so on).
-  - Optionally, [protect your production variant](/studio/org/graphs#protected-variants-enterprise-only) to avoid accidental changes while working in Apollo Studio.
+- Ensure that you've created multiple [variants](/studio/org/graphs#variants) to represent the different environments where your supergraph runs (production, staging, and so on).
+  - Optionally, [protect your production variant](/studio/graph-access-permissions#protected-variants-enterprise-only) to avoid accidental changes while working in Apollo Studio.
 - Ensure that your [clients identify themselves](/studio/metrics/client-awareness/) by name and version.
   - If you're using an Apollo Client library, you can add a client name and version to the constructor.
     - For example, the [React client uses the `name` and `version` attributes](/react/api/core/ApolloClient#name) in the constructor options.
