--- a/src/content/studio/index.mdx
+++ b/src/content/studio/index.mdx
@@ -11,7 +11,7 @@ import { Link } from 'gatsby';
 <p>
   <Button
     colorScheme="indigo"
-    to="/getting-started/"
+    to="/studio/getting-started/"
     as={Link}
     style={{
       marginRight: '10px'
@@ -75,7 +75,7 @@ In addition to the features above, an Enterprise plan provides access to our Gra
 **Ready to create your first supergraph?**
 <Button
   colorScheme="indigo"
-  to="/getting-started/"
+  to="/studio/getting-started/"
   as={Link}
   style={{
     marginRight: '10px'
