--- a/src/content/studio/cloud-routing/configuration.mdx
+++ b/src/content/studio/cloud-routing/configuration.mdx
@@ -46,7 +46,7 @@ headers:
     request:
       - insert:
           name: "subgraph-token"
-          value: "${MY_SECRET}" # highlight-line
+          value: "${env.MY_SECRET}" # highlight-line
 ```
 
 ## Router configuration YAML
