Clarify organization requirements for onboarding

--- a/src/content/studio/getting-started.mdx
+++ b/src/content/studio/getting-started.mdx
@@ -18,6 +18,23 @@ To complete these steps, it's helpful to have one of the following available:
 
 ## 1. Create your Apollo account
 
+<blockquote>
+
+
+**If you already have an Apollo account,** and you created your organization prior to 4 October 2022, you might need to **create a new organization** to create cloud supergraphs:
+
+<img
+  src="./img/organization-list.jpg"
+  class="screenshot"
+  alt="Studio organization list"
+  width="300"
+/>
+
+[Learn about upgrading an existing organization.](./org/plans#upgrading-to-a-current-plan)
+
+
+</blockquote>
+
 **Apollo Studio** is the primary web interface for interacting with the GraphOS platform. We'll use Studio in every step of this tutorial, starting with creating an account.
 
 1. Go to [studio.apollographql.com](https://studio.apollographql.com/) and click **Let's get started**.
