--- a/src/content/studio/org/plans.mdx
+++ b/src/content/studio/org/plans.mdx
@@ -43,7 +43,7 @@ If you have a non-Enterprise Apollo organization that was created before **4 Oct
 
 To create cloud supergraphs, your Apollo organization needs to be on either the **Serverless (Free)** plan or the **Serverless** plan.
 
-**If you're on the legacy Free plan,** you can convert your organization to the current **Serverless (Free)** plan by clicking **Convert to Serverless (Free)** in the top-right corner of your organization's page in Studio:
+**If your organization is on the legacy Free plan,** you can convert your organization to the current **Serverless (Free)** plan by clicking **Convert to Serverless (Free)** in the top-right corner of your organization's page in Studio:
 
 <img class="screenshot" alt="A screenshot of the Convert to Serverless (Free) button" src="../img/convert-to-serverless.jpg" />
 
