Modify platform API variant

--- a/src/content/studio/platform-api.mdx
+++ b/src/content/studio/platform-api.mdx
@@ -22,7 +22,7 @@ The Platform API is itself represented as a public graph in GraphOS! Documentati
   <ButtonLink
     size="md"
     colorScheme="indigo"
-    href="https://studio.apollographql.com/public/apollo-platform/home?variant=current"
+    href="https://studio.apollographql.com/public/apollo-platform/home?variant=main"
   >
     Open Platform API docs
   </ButtonLink>
