--- a/src/content/studio/index.mdx
+++ b/src/content/studio/index.mdx
@@ -55,8 +55,8 @@ These features (along with many others) are available to organizations on the **
 
 These additional features are available to organizations on an **Enterprise** plan:
 
-- **Self-managed routing.**
-  - Run your supergraph's router inside your own infrastructure, enabling you to maximize its performance and fully customize its behavior. Self-managed routers use [the same powerful technology](/router/) that cloud routing uses under the hood.
+- **Self-deployed routing.**
+  - Deploy your supergraph's router inside your own infrastructure, enabling you to maximize its performance and fully customize its behavior. Self-deployed routers use [the same powerful technology](/router/) that cloud routing uses under the hood.
 - **Supergraph filtering with [contracts](./contracts/).**
   - Deploy multiple instances of your router that use different filtered subsets of your supergraph's schema. Different clients can then communicate with different routers, limiting them to whichever types and fields they should have access to.
 - **Extended data retention.**
